// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aspectRatio renders 0 1`] = `
Array [
  .c0 {
  aspect-ratio: 0;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: 0;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: 0;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders function 1`] = `
Array [
  .c0 {
  aspect-ratio: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: has;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: has;
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders invalid theme path 1`] = `
Array [
  .c0 {
  aspect-ratio: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders negative number 1`] = `
Array [
  .c0 {
  aspect-ratio: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    aspect-ratio: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    aspect-ratio: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    aspect-ratio: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    aspect-ratio: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    aspect-ratio: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    aspect-ratio: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    aspect-ratio: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    aspect-ratio: July;
  }
}

@media April {
  .c0 {
    aspect-ratio: August;
  }
}

@media January {
  .c0 {
    aspect-ratio: September;
  }
}

@media April {
  .c0 {
    aspect-ratio: November;
  }
}

@media June {
  .c0 {
    aspect-ratio: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    aspect-ratio: July;
  }
}

@media April {
  .c0 {
    aspect-ratio: August;
  }
}

@media January {
  .c0 {
    aspect-ratio: September;
  }
}

@media April {
  .c0 {
    aspect-ratio: November;
  }
}

@media June {
  .c0 {
    aspect-ratio: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    aspect-ratio: January;
  }
}

@media April {
  .c0 {
    aspect-ratio: December;
  }
}

@media January {
  .c0 {
    aspect-ratio: April;
  }
}

@media April {
  .c0 {
    aspect-ratio: May;
  }
}

@media June {
  .c0 {
    aspect-ratio: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    aspect-ratio: January;
  }
}

@media April {
  .c0 {
    aspect-ratio: December;
  }
}

@media January {
  .c0 {
    aspect-ratio: April;
  }
}

@media April {
  .c0 {
    aspect-ratio: May;
  }
}

@media June {
  .c0 {
    aspect-ratio: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders postitive number 1`] = `
Array [
  .c0 {
  aspect-ratio: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders string 1`] = `
Array [
  .c0 {
  aspect-ratio: July;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: July;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: June;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: June;
}

<div
    className="c0"
  />,
]
`;

exports[`aspectRatio renders valid theme path 1`] = `
Array [
  .c0 {
  aspect-ratio: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  aspect-ratio: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
